added new painter classes, reworked class Button